@@ -1569,25 +1569,25 @@ void alcGetIntegerv( ALCdevice *deviceHandle, ALCenum  token,
  Capture functions
 */
 
-ALCdevice *alcCaptureOpenDevice(const ALCchar *devicename, ALCuint frequency, ALCenum format, ALCsizei buffersize )
+ALCdevice *alcCaptureOpenDevice( UNUSED(const ALCchar *devicename), UNUSED(ALCuint frequency), UNUSED(ALCenum format), UNUSED(ALCsizei buffersize) )
 {
 	return NULL;
 }
 
-ALCAPI ALCboolean      ALCAPIENTRY alcCaptureCloseDevice( ALCdevice *device )
+ALCAPI ALCboolean      ALCAPIENTRY alcCaptureCloseDevice( UNUSED(ALCdevice *device) )
 {
 	_alcSetError(ALC_INVALID_DEVICE);
 	return ALC_FALSE;
 }
 
-ALCAPI void            ALCAPIENTRY alcCaptureStart( ALCdevice *device )
+ALCAPI void            ALCAPIENTRY alcCaptureStart( UNUSED(ALCdevice *device) )
 {
 }
 
-ALCAPI void            ALCAPIENTRY alcCaptureStop( ALCdevice *device )
+ALCAPI void            ALCAPIENTRY alcCaptureStop( UNUSED(ALCdevice *device) )
 {
 }
 
-ALCAPI void            ALCAPIENTRY alcCaptureSamples( ALCdevice *device, ALCvoid *buffer, ALCsizei samples )
+ALCAPI void            ALCAPIENTRY alcCaptureSamples( UNUSED(ALCdevice *device), UNUSED(ALCvoid *buffer), UNUSED(ALCsizei samples) )
 {
 }
